<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.DetailViewActivity"
    tools:showIn="@layout/activity_detail_view">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:paddingTop="50dp"
                android:paddingBottom="50dp">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/user_image"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@mipmap/ic_launcher"
                    app:civ_border_color="#fff"
                    app:civ_border_width="2dp" />
            </LinearLayout> <!---image -->

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:baselineAligned="false"
                android:id="@+id/following_container"
                android:background="@drawable/custom_border_b">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/custom_border_r"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/following"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/following_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:textColor="#000"
                        android:text="@string/following_count"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/followers"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/followers_count"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="#000"
                        android:textSize="24sp"
                        android:text="@string/followers_count"/>
                </LinearLayout>

            </LinearLayout> <!-- Following Data -->

            <LinearLayout
                android:id="@+id/user_detail_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_border_b"
                android:baselineAligned="false"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/user_detail_item"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:baselineAligned="false"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/username_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/username_field"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:visibility="visible"
                        android:layout_gravity="start"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp" />

                    <TextView
                        android:id="@+id/username_value"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:layout_gravity="end"
                        android:paddingRight="15dp"
                        android:paddingLeft="0dp"
                        android:textSize="16sp"
                        android:text="@string/username"
                        android:paddingEnd="15dp"
                        android:paddingStart="0dp" />


                </LinearLayout> <!-- username -->

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:baselineAligned="false"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/org_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="#000"
                        android:textSize="17sp"
                        android:visibility="visible"
                        android:layout_gravity="start"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="@string/company_field" />

                    <TextView
                        android:id="@+id/company_name"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:layout_gravity="end"
                        android:paddingRight="15dp"
                        android:paddingLeft="0dp"
                        android:paddingStart="0dp"
                        android:textSize="16sp"
                        android:text="@string/company_name"
                        android:paddingEnd="15dp" />


                </LinearLayout> <!-- company -->

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:baselineAligned="false"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/repo_field"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="#000"
                        android:textSize="17sp"
                        android:layout_gravity="start"
                        android:paddingLeft="15dp"
                        android:paddingStart="15dp"
                        android:paddingRight="0dp"
                        android:paddingEnd="0dp"
                        android:text="@string/public_repos" />

                    <TextView
                        android:id="@+id/public_repo_count"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewEnd"
                        android:layout_gravity="end"
                        android:paddingRight="15dp"
                        android:paddingEnd="15dp"
                        android:paddingLeft="0dp"
                        android:paddingStart="0dp"
                        android:textSize="16sp"
                        android:text="@string/public_repo_count" />
                </LinearLayout> <!-- repos -->
            </LinearLayout> <!-- user details -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:gravity="center"
                    />

                <TextView
                    android:id="@+id/bio_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/bio_value"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>