<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:paddingTop="50dp"
            android:paddingBottom="50dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/user_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="#fff"
                app:civ_border_width="2dp" />
        </LinearLayout> <!---image -->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:baselineAligned="false"
            android:id="@+id/following_container"
            android:background="@drawable/custom_border_b">

            <LinearLayout
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/custom_border_r"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/following"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/following_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="#000"
                    android:text="@string/following_count"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/followers"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/followers_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="24sp"
                    android:text="@string/followers_count"/>
            </LinearLayout>

        </LinearLayout> <!-- Following Data -->

        <LinearLayout
            android:id="@+id/user_detail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border_b"
            android:baselineAligned="false"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/user_detail_item"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:baselineAligned="false"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/username_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Username"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:visibility="visible"
                    android:layout_gravity="start"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    tools:text="Username" />

                <TextView
                    android:id="@+id/username_value"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:layout_gravity="end"
                    android:paddingRight="15dp"
                    android:textSize="16sp"
                    tools:text="johngorithm" />


            </LinearLayout> <!-- username -->

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:baselineAligned="false"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/org_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/full_name_field"
                    android:textColor="#000"
                    android:textSize="17sp"
                    android:visibility="visible"
                    android:layout_gravity="start"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    tools:text="Company" />

                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:layout_gravity="end"
                    android:paddingRight="15dp"
                    android:textSize="16sp"
                    tools:text="Andela" />


            </LinearLayout> <!-- company -->

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:baselineAligned="false"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/repo_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/full_name_field"
                    android:textColor="#000"
                    android:textSize="17sp"
                    android:layout_gravity="start"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    tools:text="Public Repos" />

                <TextView
                    android:id="@+id/public_repo_count"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:layout_gravity="end"
                    android:paddingRight="15dp"
                    android:textSize="16sp"
                    tools:text="38" />
            </LinearLayout> <!-- repos -->
        </LinearLayout> <!-- user details -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bio"
                android:textColor="#000"
                android:textSize="18sp"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/bio_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                tools:text="Alex Honeysett is a Brand and Marketing Strategist who partners with CEOs."
                android:textSize="16sp" />

        </LinearLayout>



    </LinearLayout>

</ScrollView>
